welcome.lessons.welcome.bat.bool2.In1To10.scala.error
in1To10:4: error: illegal start of simple expression
	if (ousideMode==true && {n<=1 || n>=10=})
                                               ^