welcome.lessons.welcome.bat.bool2.In1To10.scala.code
def in1To10(n:Int, outsideMode:Boolean):Boolean = {
	if (ousideMode==false && n>=1 && n<= 10)
	return true
	if (ousideMode==true && {n<=1 || n>=10=})
	return true
	else 
	return false
}
